deploy/local/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: intranet-local
spec:
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0
  selector:
    matchLabels:
      app: intranet-local
  template:
    metadata:
      labels:
        app: intranet-local
    spec:
      volumes:
        - name: uploads
          emptyDir: {}
        - name: nginx-cache
          emptyDir: {}
      terminationGracePeriodSeconds: 35
      containers:
        - name: nginx
          image: intranet-nginx:latest
          imagePullPolicy: Never
          resources: {}
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: nginx-cache
              mountPath: /var/run/nginx-cache

        - name: fpm
          image: intranet-fpm:latest
          imagePullPolicy: Never
          securityContext:
            runAsUser: 82
          volumeMounts:
            - name: uploads
              mountPath: /var/www/html/public/app/uploads
          resources: {}
          ports:
            - containerPort: 9000
