deploy/local/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: intranet-local
spec:
  ports:
  - port: 8080
  selector:
    app: intranet-local
